# Kirstensviewer

./: .gitignore  README.md  installS24.xml
indra/: AutoBuild-S24.ps1  CMakeLists.txt  Invoke-Clean.ps1  Invoke-Configure.ps1  Invoke-Package.ps1  Invoke-ViewerManifest.ps1
indra/cmake/: 00-BuildOptions.cmake  00-Common.cmake  APR.cmake  Audio.cmake  Boost.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  DXRender.cmake  DragDrop.cmake  EXPAT.cmake  FMODSTUDIO.cmake  FindOpenJPEG.cmake  FreeType.cmake  GLEXT.cmake  GLH.cmake  GLM.cmake  Glut.cmake  Hunspell.cmake  ICU4C.cmake  JPEG.cmake  LLAppearance.cmake  LLAudio.cmake  LLCharacter.cmake  LLCommon.cmake  LLConvexdecomposition.cmake  LLCoreHttp.cmake  LLFileSystem.cmake  LLImage.cmake  LLImageJ2COJ.cmake  LLInventory.cmake  LLLogin.cmake  LLMath.cmake  LLMeshOptimizer.cmake  LLMessage.cmake  LLPlugin.cmake  LLPrimitive.cmake  LLRender.cmake  LLSharedLibs.cmake  (+31 more)
indra/dxrender/: CMakeLists.txt
indra/llappearance/: CMakeLists.txt  llavatarappearance.cpp  llavatarjointmesh.cpp  lldriverparam.cpp  llpolymesh.cpp  llpolymorph.cpp  lltexlayer.cpp  lltexlayerparams.cpp  llwearable.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llaudioengine_openal.cpp  llaudioengine_openal.h  lllistener_fmodstudio.cpp  llstreamingaudio.h  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.cpp  llwindgen.h
indra/llcharacter/: llanimationstates.cpp  llanimationstates.h  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointsolverrp3.h  lljointstate.h  llkeyframefallmotion.cpp  llkeyframefallmotion.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llkeyframewalkmotion.h  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.cpp  llpose.h  lltargetingmotion.cpp  lltargetingmotion.h  llvisualparam.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  StackWalker.h  ctype_workaround.h  fsyspath.h  hbxxh.cpp  indra_constants.cpp  indra_constants.h  is_approx_equal_fraction.h  lazyeventapi.h  linden_common.h  llalignedarray.h  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llassettype.cpp  llassettype.h  llbase32.cpp  llbase64.cpp  llbitpack.cpp  llbitpack.h  llcallbacklist.cpp  llcallbacklist.h  llcleanup.cpp  llcleanup.h  llcommon.cpp  llcommon.h  llcoros.cpp  llcoros.h  llcrc.h  lldate.cpp  lldate.h  lldeadmantimer.h  lldefs.h  lldependencies.h  lldoubledispatch.h  llerror.cpp  llerror.h  llerrorcontrol.h  (+115 more)
indra/llconvexdecomposition/: CMakeLists.txt  llconvexdecompositionvhacd.cpp
indra/llcorehttp/: CMakeLists.txt  _httpinternal.h  _httplibcurl.cpp  _httplibcurl.h  _httpoperation.cpp  _httpoperation.h  _httpoprequest.cpp  _httpoprequest.h  _httpopsetget.h  _httppolicy.cpp  _httppolicy.h  _httppolicyglobal.h  _httpreadyqueue.h  _httpreplyqueue.h  _httprequestqueue.cpp  _httprequestqueue.h  _httpservice.cpp  _httpservice.h  _mutex.h  _refcounted.h  _thread.h  bufferarray.cpp  bufferarray.h  bufferstream.cpp  bufferstream.h  httpcommon.cpp  httpcommon.h  httpheaders.h  httpoptions.cpp  httpoptions.h  httprequest.cpp  httprequest.h  httpresponse.h  httpstats.cpp  httpstats.h  llhttpconstants.cpp  llhttpconstants.h
indra/llfilesystem/: CMakeLists.txt  lldir.cpp  lldir.h  lldir_win32.cpp  lldir_win32.h  lldirguard.h  lldiriterator.cpp  lldiskcache.cpp  llfilesystem.cpp  llfilesystem.h  lllfsthread.cpp  lllfsthread.h
indra/llimage/: CMakeLists.txt  llimage.cpp  llimage.h  llimagebmp.cpp  llimagebmp.h  llimagedimensionsinfo.cpp  llimagedimensionsinfo.h  llimagedxt.cpp  llimagefilter.cpp  llimagejpeg.cpp  llimagejpeg.h  llimagepng.cpp  llimagetga.cpp  llimageworker.cpp  llimageworker.h  llpngwrapper.cpp
indra/llimagej2coj/: CMakeLists.txt  llimagej2coj.cpp  llimagej2coj.h
indra/llinventory/: CMakeLists.txt  llfoldertype.cpp  llfoldertype.h  llinventory.cpp  lllandmark.h  llparcel.h  llpermissionsflags.h  llsaleinfo.cpp  llsaleinfo.h  llsettingsbase.cpp  llsettingsbase.h  llsettingssky.cpp  llsettingswater.cpp  lltransactionflags.cpp
indra/llmath/: CMakeLists.txt  llbbox.cpp  llbbox.h  llbboxlocal.h  llcalc.cpp  llcalcparser.h  llcoordframe.cpp  llcoordframe.h  llline.cpp  llline.h  llmath.h  llmatrix3a.cpp  llmatrix3a.h  llmatrix4a.cpp  llperlin.cpp  llplane.h  llquantize.h  llquaternion.cpp  llquaternion.h  llquaternion2.h  llrect.h  llrigginginfo.cpp  llrigginginfo.h  llsdutil_math.cpp  llsimdmath.h  llsimdtypes.h  llsphere.cpp  lltreenode.h  llvector4a.cpp  llvector4a.h  llvector4a.inl  llvector4logical.h  llvolume.cpp  m3math.cpp  m3math.h  m4math.cpp  m4math.h  raytrace.cpp  v2math.cpp  v2math.h  (+13 more)
indra/llmeshoptimizer/: CMakeLists.txt
indra/llmessage/: CMakeLists.txt  llavatarnamecache.cpp  llavatarnamecache.h  llcachename.cpp  llcachename.h  llcircuit.cpp  llcoproceduremanager.cpp  llcoproceduremanager.h  llcorehttputil.cpp  llcorehttputil.h  lldatapacker.cpp  llexperiencecache.cpp  llexperiencecache.h  llhost.cpp  llhttpnode.cpp  llhttpsdhandler.cpp  lliohttpserver.cpp  lliosocket.cpp  lliosocket.h  llmessageconfig.cpp  llmessagetemplate.cpp  llnamevalue.cpp  llpacketbuffer.cpp  llpacketbuffer.h  llpacketring.cpp  llproxy.cpp  llpumpio.cpp  llpumpio.h  llsdappservices.cpp  llservice.cpp  llservicebuilder.cpp  lltemplatemessagebuilder.cpp  lltemplatemessagereader.cpp  llthrottle.cpp  lltransfermanager.cpp  lltransfersourceasset.cpp  lltransfersourcefile.cpp  lltransfertargetfile.cpp  lltransfertargetfile.h  lltransfertargetvfile.cpp  (+9 more)
indra/llplugin/: CMakeLists.txt  llpluginclassmedia.cpp  llpluginclassmedia.h  llpluginmessagepipe.cpp  llpluginprocesschild.cpp  (+3 more)
(+1247 files in other folders)
